Fix more css and js to align with mortarboard design language

--- a/public/chat.css
+++ b/public/chat.css
@@ -44,12 +44,15 @@ form #button {
   padding: 5px 10px;
 }
 
-#messages li:nth-child(odd) {
-  background: #eee;
-}
-
 #notifyUser {
   position: fixed;
   bottom: 42px;
   width: 100%;
+}
+
+#mainScreenLogo {
+  display: flex;
+  align-content: center;
+  max-width: 400px;
+  margin: auto;
 }
